# csv_qa

./: README.md  csv_qa.py  pyproject.toml
outputs/evals/csv_qa--gpt-4.1-mini/7fb58b6b/: metadata.json  results.jsonl
outputs/evals/csv_qa--gpt-4.1-mini/7fc45f47/: metadata.json  results.jsonl
outputs/evals/csv_qa--gpt-4.1-mini/d06eca6c/: metadata.json  results.jsonl
outputs/evals/csv_qa--gpt-4.1-mini/dd172a05/: metadata.json  results.jsonl
