[project]
name = "csv-qa"
description = "Synthetic CSV QA over a Faker-generated product catalog."
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faker>=37.6.0",
    "verifiers>=0.1.3.post0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["csv_qa.py"]
